frontend/test/should_fail/assign_001.grg
using attrib_model_001;

rule r {
	pattern {
		ni : NINT;
		nb : NBOOL;
		nf : NFLOAT;
		nd : NDOUBLE;
		ns : NSTRING;
		-ei:EINT->;
		-eb:EBOOL->;
		-ef:EFLOAT->;
		-ed:EDOUBLE->;
		-es:ESTRING->;
	}
	modify {
		eval {
			// no implicit cast from double to float
			nf = nd;
		}
	}
} attr

